Fix CheatSheet's visibility class

--- a/packages/helveg-explorer/styles/_cheatsheet.scss
+++ b/packages/helveg-explorer/styles/_cheatsheet.scss
@@ -20,6 +20,10 @@
     align-items: center;
     z-index: 10;
     pointer-events: all;
+    
+    &.hidden {
+        display: none;
+    }
 
     &>.cheatsheet-inner {
         width: 100%;
